--- a/locales/en.json
+++ b/locales/en.json
@@ -29,5 +29,6 @@
     "TM": "Monthly Rate (TM)",
     "balanceOverTime": "Balance Over Time",
     "totalSavings": "Total Savings",
-    "newTerm": "New Term"
+    "newTerm": "New Term",
+    "dareToBeFinanciallyDifferent": "Dare to be financially different"
 }
