--- a/locales/es.json
+++ b/locales/es.json
@@ -29,5 +29,6 @@
     "TM": "Tasa Mensual (TM)",
     "balanceOverTime": "Saldo a lo Largo del Tiempo",
     "totalSavings": "Ahorro Total",
-    "newTerm": "Nuevo Plazo"
+    "newTerm": "Nuevo Plazo",
+    "dareToBeFinanciallyDifferent": "Atrévete a ser financieramente diferente"
 }
