--- a/locales/pt.json
+++ b/locales/pt.json
@@ -29,5 +29,6 @@
     "TM": "Taxa Mensal (TM)",
     "balanceOverTime": "Saldo ao Longo do Tempo",
     "totalSavings": "Poupança Total",
-    "newTerm": "Novo Prazo"
+    "newTerm": "Novo Prazo",
+    "dareToBeFinanciallyDifferent": "Ouse ser financeiramente diferente"
 }
