--- a/locales/en.json
+++ b/locales/en.json
@@ -30,5 +30,7 @@
     "balanceOverTime": "Balance Over Time",
     "totalSavings": "Total Savings",
     "newTerm": "New Term",
-    "dareToBeFinanciallyDifferent": "Dare to be financially different"
+    "dareToBeFinanciallyDifferent": "Dare to be financially different",
+    "contact": "Contact",
+    "phone": "Phone"
 }
