--- a/locales/es.json
+++ b/locales/es.json
@@ -30,5 +30,7 @@
     "balanceOverTime": "Saldo a lo Largo del Tiempo",
     "totalSavings": "Ahorro Total",
     "newTerm": "Nuevo Plazo",
-    "dareToBeFinanciallyDifferent": "Atrévete a ser financieramente diferente"
+    "dareToBeFinanciallyDifferent": "Atrévete a ser financieramente diferente",
+    "contact": "Contacto",
+    "phone": "Teléfono"
 }
