--- a/locales/pt.json
+++ b/locales/pt.json
@@ -30,5 +30,7 @@
     "balanceOverTime": "Saldo ao Longo do Tempo",
     "totalSavings": "Poupança Total",
     "newTerm": "Novo Prazo",
-    "dareToBeFinanciallyDifferent": "Ouse ser financeiramente diferente"
+    "dareToBeFinanciallyDifferent": "Ouse ser financeiramente diferente",
+    "contact": "Contato",
+    "phone": "Telefone"
 }
