Added favicon and title

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,5 @@
 {
+    "title": "Loan Simulator - Calculate Your Savings",
     "loanSimulator": "Loan Simulator",
     "loanAmount": "Loan Amount",
     "loanAmountTooltip": "Enter the total amount of the loan.",
