--- a/locales/es.json
+++ b/locales/es.json
@@ -1,4 +1,5 @@
 {
+    "title": "Simulador de Préstamos - Calcula tus Ahorros",
     "loanSimulator": "Simulador de Préstamos",
     "loanAmount": "Monto del Préstamo",
     "loanAmountTooltip": "Ingrese el monto total del préstamo.",
