--- a/locales/pt.json
+++ b/locales/pt.json
@@ -1,4 +1,5 @@
 {
+    "title": "Simulador de Empréstimos - Calcule suas Economias",
     "loanSimulator": "Simulador de Empréstimos",
     "loanAmount": "Montante do Empréstimo",
     "loanAmountTooltip": "Insira o montante total do empréstimo.",
